force-app/main/default/objects/Case/fields/Booking_number_from_webform__c.field-meta.xml
<CustomField>
    <fullName>Booking_number_from_webform__c</fullName>
    <inlineHelpText>Provide booking number in format of &quot;PO# 00000000&quot;</inlineHelpText>
    <label>Booking number from webform</label>
    <length>45</length>
    <type>Text</type>
</CustomField>