force-app/main/default/objects/Case/fields/In_current_status_for__c.field-meta.xml
<CustomField>
    <fullName>In_current_status_for__c</fullName>
    <formula>TEXT( FLOOR (NOW() - Last_status_change_date__c) ) &amp; &quot; Day(s) &quot; &amp;

TEXT(ROUND(MOD((NOW() - Last_status_change_date__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp;

TEXT(ROUND(MOD((NOW() - Last_status_change_date__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In current status for</label>
    <type>Text</type>
</CustomField>