force-app/main/default/objects/Case/fields/Last_Change_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Org_Id__c</fullName>
    <label>Last Change Org Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>