force-app/main/default/objects/Case/fields/Last_status_change_date__c.field-meta.xml
<CustomField>
    <fullName>Last_status_change_date__c</fullName>
    <label>Last status change date</label>
    <type>DateTime</type>
</CustomField>