force-app/main/default/objects/Case/fields/Minutes_in_Closed_status__c.field-meta.xml
<CustomField>
    <fullName>Minutes_in_Closed_status__c</fullName>
    <formula>Recent_close_time__c +  previous_closed_total_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes in Closed status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>