force-app/main/default/objects/Case/fields/Preferred_language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_language__c</fullName>
    <label>Preferred language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>