force-app/main/default/objects/Case/fields/previous_closed_total_time__c.field-meta.xml
<CustomField>
    <fullName>previous_closed_total_time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Closed total time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>