force-app/main/default/objects/Case/fields/Recent_close_time__c.field-meta.xml
<CustomField>
    <fullName>Recent_close_time__c</fullName>
    <formula>ROUND((NOW() - ClosedDate)*24*60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent close time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>