force-app/main/default/objects/Case/fields/Related_booking__c.field-meta.xml
<CustomField>
    <fullName>Related_booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking related</label>
    <referenceTo>Schedule_booking__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>