force-app/main/default/objects/Case/fields/Times_reopened__c.field-meta.xml
<CustomField>
    <fullName>Times_reopened__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times reopened</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>