force-app/main/default/objects/Case/fields/Total_case_open_time__c.field-meta.xml
<CustomField>
    <fullName>Total_case_open_time__c</fullName>
    <formula>TEXT(  FLOOR (((Total_open_time_in_minutes__c / 60 ) / 24 )) )  &amp; &quot; Day(s) &quot; &amp;

TEXT(  FLOOR( (Total_open_time_in_minutes__c / 60 ) ) -  (FLOOR (((Total_open_time_in_minutes__c / 60 ) / 24 )) * 24 )  ) &amp; &quot; Hour(s) &quot; &amp;

TEXT( ( Total_open_time_in_minutes__c )  -  ( FLOOR(Total_open_time_in_minutes__c / 60 ) * 60 ) ) &amp; &quot; Minute(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total case open time</label>
    <type>Text</type>
</CustomField>