force-app/main/default/objects/Case/fields/Total_open_time_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_open_time_in_minutes__c</fullName>
    <formula>ROUND((NOW() - CreatedDate)*24*60, 0) -  Minutes_in_Closed_status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total open time in minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>