force-app/main/default/objects/Case/recordTypes/Change_request.recordType-meta.xml
<RecordType>
    <fullName>Change_request</fullName>
    <active>true</active>
    <businessProcess>Support requests</businessProcess>
    <description>Request for changes in exisiting booking</description>
    <label>Change request</label>
</RecordType>