force-app/main/default/objects/Case/recordTypes/Complaint_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Complaint_Delivery</fullName>
    <active>true</active>
    <businessProcess>Complaints requests</businessProcess>
    <label>Complaint - Delivery</label>
</RecordType>