force-app/main/default/objects/Case/recordTypes/Complaint_Missing_or_damaged_goods.recordType-meta.xml
<RecordType>
    <fullName>Complaint_Missing_or_damaged_goods</fullName>
    <active>true</active>
    <businessProcess>Complaints requests</businessProcess>
    <label>Complaint - Missing or damaged goods</label>
</RecordType>