force-app/main/default/objects/Case/recordTypes/Complaint_other.recordType-meta.xml
<RecordType>
    <fullName>Complaint_other</fullName>
    <active>true</active>
    <businessProcess>Complaints requests</businessProcess>
    <label>Complaint - other</label>
</RecordType>