force-app/main/default/objects/Case/recordTypes/Invoice_correction.recordType-meta.xml
<RecordType>
    <fullName>Invoice_correction</fullName>
    <active>true</active>
    <businessProcess>Finance requests</businessProcess>
    <description>Customer requests a correction to issued invoice</description>
    <label>Invoice correction</label>
</RecordType>