force-app/main/default/objects/Case/recordTypes/Invoice_request.recordType-meta.xml
<RecordType>
    <fullName>Invoice_request</fullName>
    <active>true</active>
    <businessProcess>Finance requests</businessProcess>
    <description>Customer requests a creation of invoice</description>
    <label>Invoice request</label>
</RecordType>