force-app/main/default/objects/Case/recordTypes/Support_Other.recordType-meta.xml
<RecordType>
    <fullName>Support_Other</fullName>
    <active>true</active>
    <businessProcess>Support requests</businessProcess>
    <description>Other requests for Customer Service</description>
    <label>Support - Other</label>
</RecordType>