force-app/main/default/objects/Case/recordTypes/Support_question.recordType-meta.xml
<RecordType>
    <fullName>Support_question</fullName>
    <active>true</active>
    <businessProcess>Support requests</businessProcess>
    <description>Questions regarding existing bookings</description>
    <label>Support question</label>
</RecordType>