force-app/main/default/objects/Case/listViews/Chinese_Case.listView-meta.xml
<ListView>
    <fullName>Chinese_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chinese - Payment</label>
    <queue>Chinese_Payment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>