force-app/main/default/objects/Case/listViews/Chinese_Complaint_Case.listView-meta.xml
<ListView>
    <fullName>Chinese_Complaint_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chinese - Complaint</label>
    <queue>Chinese_Complaint</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>