force-app/main/default/objects/Case/listViews/Chinese_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>Chinese_Customer_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chinese - Customer Service</label>
    <queue>Chinese_Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>