force-app/main/default/objects/Case/listViews/Complaint_Dept_Case.listView-meta.xml
<ListView>
    <fullName>Complaint_Dept_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaint Dept</label>
    <queue>Complaint_Dept</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>