force-app/main/default/objects/Case/listViews/Customer_Service_Dept_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Dept_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service Dept</label>
    <queue>Customer_Service_Dept</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>