force-app/main/default/objects/Case/listViews/English_Case.listView-meta.xml
<ListView>
    <fullName>English_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>English - Payment</label>
    <queue>English_Payment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>