force-app/main/default/objects/Case/listViews/English_Complaint_Case.listView-meta.xml
<ListView>
    <fullName>English_Complaint_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>English - Complaint</label>
    <queue>English_Complaint</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>