force-app/main/default/objects/Case/listViews/English_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>English_Customer_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>English - Customer Service</label>
    <queue>English_Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>