force-app/main/default/objects/Case/listViews/French_Case.listView-meta.xml
<ListView>
    <fullName>French_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>French - Payment</label>
    <queue>French_Payment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>