force-app/main/default/objects/Case/listViews/French_Complain_Case.listView-meta.xml
<ListView>
    <fullName>French_Complain_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>French - Complaint</label>
    <queue>French_Complaint</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>