force-app/main/default/objects/Case/listViews/French_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>French_Customer_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>French - Customer Service</label>
    <queue>French_Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>