force-app/main/default/objects/Case/listViews/German_Case.listView-meta.xml
<ListView>
    <fullName>German_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>German - Payment</label>
    <queue>German_Payment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>