force-app/main/default/objects/Case/listViews/German_Complaint_Case.listView-meta.xml
<ListView>
    <fullName>German_Complaint_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>German - Complaint</label>
    <queue>German_Complaint</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>