force-app/main/default/objects/Case/listViews/German_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>German_Customer_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>German - Customer Service</label>
    <queue>German_Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>